--- a/FirstSnake.vcxproj.filters
+++ b/FirstSnake.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Snake.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Food.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gotoprint.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Snake.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Food.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
